| Summary: | ASTERISK-19862: app_queue: Update Data of Queues (use queues as outbound calls container) | ||
| Reporter: | Sebastian Gutierrez (sum) | Labels: | |
| Date Opened: | 2012-05-11 11:19:49 | Date Closed: | 2017-01-17 17:27:00.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 1.8.12.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) diff.diff ( 1) UpdateQueue_trunk_patch.diff ( 2) UpdateQueue.diff | |
| Description: | this adds a new dialplan function QueueUpdate, with this is possible using it at h exten to have Outbound queues. The idea is to be able to track in realtime outbound calls (completed, canceled) this will also log a new event on queue_log OUTCALL that has information about these calls. I know probably this wont be included, but I´m looking for advice anyway due to Im having crashes on asterisk, (previously on 1.6.2 didn´t have) but maybe something changed. Review: https://reviewboard.asterisk.org/r/1958/ | ||
| Comments: | By: Jamuel Starkey (jamuel) 2012-05-11 12:34:59.318-0500 I'd suggest you post it to Review Board. Not that it will get it reviewed for 1.8 but the easier that you make it the better the chance . . . By: Sebastian Gutierrez (sum) 2012-05-14 13:02:58.840-0500 at least any comment on the code? just to know if is leaking or everything is destoyed as it should. Thanks By: Paul Belanger (pabelanger) 2012-05-16 18:26:58.357-0500 New features need to be applied against trunk. Additionally, please read up on the coding guidelines, once complete post your patch to reviewboard. By: Sebastian Gutierrez (sum) 2012-05-18 15:38:27.530-0500 this patch is not usable for reviewboard (give me errors on upload), as I moved a long time ago from svn, I´m using mercurial or git patches, is it possible to use them? or maybe have to move back to use svn to contribute to asterisk? By: Matt Jordan (mjordan) 2012-05-21 13:58:53.415-0500 New features do have to be written against trunk, and have to be provided in unified diff format. We do not accept mercurial or git patches for contributions. That being said, I took a look at your patch and did not see any obvious memory corruption issues that would be explaining the issues you're currently encountering. I would say that it is highly unlikely that this patch is causing any problems in your Asterisk installations. By: Sebastian Gutierrez (sum) 2012-05-21 17:44:08.852-0500 is this diff.diff ok?? I´m able to code this against trunk if the function will be included, if not there´s not point to make it against trunk if there is no interest in this, and you can close the issue. As this is a sepparate function it doesn´t change any part of the code of the app_queue, so I think is possible to check if it is usefull for the project or not altough is againts 1.8 branch. thanks By: Matt Jordan (mjordan) 2012-06-04 08:16:02.910-0500 Yes, that diff is in the correct format, although, as has been pointed out, features have to be written against the current trunk. There's no way to gauge people's interesting in the feature without having the patch written against trunk and submitted for review. If you find your feature useful and you're willing to do the work, and you'd like it to be included in a version of Asterisk, then you're more then welcome to continue to pursue this issue. Otherwise, I'll close it out. Let me know which way you'd like to proceed. By: Sebastian Gutierrez (sum) 2012-06-04 08:18:52.862-0500 ok matt let this open as soon as Im able i will make the patch against trunk. By: Sebastian Gutierrez (sum) 2012-06-04 09:41:53.619-0500 patch against trunk, compiles ok, was tested on 1.8 By: Sebastian Gutierrez (sum) 2012-09-17 14:35:18.460-0500 I close this issue due to lack of interest on this code. By: Sebastian Gutierrez (sum) 2016-10-30 14:05:51.691-0500 is there any interest in this function to go to asterisk?, I can make the gerrit review if there is interest in this feature I have been using it for some years with good results but I always have to keep the app_queue in a branch for updating. let me know if is interesting or not. By: Asterisk Team (asteriskteam) 2016-10-30 14:05:52.248-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. By: Joshua C. Colp (jcolp) 2016-10-30 14:09:19.473-0500 We will review any code that is put up for code review. By: Rusty Newton (rnewton) 2016-11-04 09:54:12.283-0500 As Josh indicated, get it up for review and it will be reviewed. It sounds useful. If there are major problems with it then others will comment on your review. By: Sebastian Gutierrez (sum) 2016-11-04 09:59:30.929-0500 I will upload 3 patches on the weekend to review: 1) this new feature 2) new service level calculation (taking in account abandoned calls) 3) setting a variable when abandon calls so when you use c option on Queue you know if it was abandoned on your dialplan all this features I have them on production environments for some years now with no problems, I will add a issue for each and relate the gerrit review By: Sebastian Gutierrez (sum) 2016-11-08 14:29:42.055-0600 I've been told to write test suits for this 3 features. (ASTERISK-26559 ASTERISK-26558 and this one) First of all I successfully installed the test suit and run it. Then I try to check if some of the already tests of app_queue were useful to have as baseline, but I found very few tests and cant see any of those that I can take as baseline, I haven't use python neither but I thought If there were a full test suits for the app_queue wouldn't be that hard, anyway as I dindn't find so many test to try to replicate I have two options: 1) If anyone interested in show me the way and do it together 2) Abandon the features All code submitted has been proven by some years using them on production environments, I understand that have tests would be great but is hard to contribute in this way to the project, I really tried to adapt to use gerrit that is really a painfull process (github and PRs are very easy and make people more prone to contribute), but writing python is something that I would have to learn just to make the test suits... And as me I suppose many others find difficult to contribute, I've also read something like this was discussed on astridevcon So let me know what to do with ASTERISK-26559 ASTERISK-26558 and this one. best regards By: Friendly Automation (friendly-automation) 2017-01-17 17:27:01.690-0600 Change 4576 merged by Joshua Colp: app_queue: Add QueueUpdate application. [https://gerrit.asterisk.org/4576|https://gerrit.asterisk.org/4576] | ||