qpp_queue: new application QueueUpdate

Application that allow uses queues for outbound processing

ASTERISK-19862

Change-Id: Ia0ab64aed934c25b2a25022adcc7c0624224346e